test/tests/stages/16_characters_and_strings/valid/libraries/char_arguments_client.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[103]:
  int
  identifier(check_args)
  (
  char
  identifier(a)
  ,
  signed
  char
  identifier(b)
  ,
  char
  identifier(c)
  ,
  unsigned
  char
  identifier(d)
  ,
  char
  identifier(e)
  ,
  char
  identifier(f)
  ,
  signed
  char
  identifier(g)
  ,
  char
  identifier(h)
  )
  ;
  int
  identifier(main)
  (
  void
  )
  {
  char
  identifier(a)
  =
  const int(5)
  ;
  signed
  char
  identifier(b)
  =
  -
  const int(12)
  ;
  char
  identifier(c)
  =
  const int(117)
  ;
  unsigned
  char
  identifier(d)
  =
  const int(254)
  ;
  char
  identifier(e)
  =
  const int(1)
  ;
  char
  identifier(f)
  =
  -
  const int(20)
  ;
  signed
  char
  identifier(g)
  =
  const int(60)
  ;
  char
  identifier(h)
  =
  const int(100)
  ;
  return
  identifier(check_args)
  (
  identifier(a)
  ,
  identifier(b)
  ,
  identifier(c)
  ,
  identifier(d)
  ,
  identifier(e)
  ,
  identifier(f)
  ,
  identifier(g)
  ,
  identifier(h)
  )
  ;
  }
