test/tests/stages/16_characters_and_strings/invalid_parse/extra_credit/character_const_label.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[12]:
  int
  identifier(main)
  (
  void
  )
  {
  const char('x')
  :
  return
  const int(0)
  ;
  }
